commit translated contents

--- a/docs/code-quality/c6385.md
+++ b/docs/code-quality/c6385.md
@@ -1,35 +1,36 @@
 ---
 title: C6385
-ms.date: 11/04/2016
+description: Descrive C++ C6385 di avviso di analisi del codice e come risolverlo.
+ms.date: 03/16/2020
 ms.topic: reference
 f1_keywords:
 - C6385
 helpviewer_keywords:
 - C6385
 ms.assetid: 3e4961e7-0f09-42a8-8cc2-151109dfdbda
-ms.openlocfilehash: ef2148a3b82f4233e8bca20d1a3c7c620da4f824
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 20a89973f6a00660652ed0159995a40e1f961665
+ms.sourcegitcommit: 44eeb065c3148d0484de791080a3f963109744fc
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419439"
+ms.lasthandoff: 03/18/2020
+ms.locfileid: "79509413"
 ---
 # <a name="c6385"></a>C6385
 
-> avviso C6385: dati non validi: accesso \<nome del buffer >, le dimensioni leggibili sono \<Size1 > byte, ma è possibile leggere \<size2 > byte: righe: x, y
+> avviso C6385: dati non validi: accesso *al nome del buffer*. le dimensioni leggibili sono *Size1* byte, ma è possibile leggere *size2* byte: righe: *x*, *y*
 
-Questo avviso indica che l'estensione leggibile del buffer specificato potrebbe essere inferiore all'indice usato per la lettura. Il tentativo di leggere i dati al di fuori dell'intervallo valido comporta un sovraccarico del buffer.
+L'extent leggibile del buffer potrebbe essere inferiore all'indice usato per la lettura. Il tentativo di leggere i dati al di fuori dell'intervallo valido comporta un sovraccarico del buffer.
 
 ## <a name="example"></a>Esempio
 
 Il codice seguente genera questo avviso:
 
 ```cpp
-void f(int i)
+void f(unsigned int i)
 {
    char a[20];
    char j;
-   if (i <= 20)
+   if (i <= 20)  // C6385
    {
       j = a[i];
    }
@@ -39,13 +40,17 @@ void f(int i)
 Per correggere il problema, usare il codice seguente:
 
 ```cpp
-void f(int i)
+void f(unsigned int i)
 {
    char a[20];
    char j;
-   if (i < 20)
+   if (i < 20)  // Okay
    {
       j = a[i];
    }
 }
 ```
+
+## <a name="see-also"></a>Vedere anche
+
+[Evitare i sovraccarichi del buffer](/windows/win32/SecBP/avoiding-buffer-overruns)
