--- a/docs/code-quality/c6031.md
+++ b/docs/code-quality/c6031.md
@@ -1,26 +1,27 @@
 ---
 title: C6031
-ms.date: 11/04/2016
+description: Descrive C++ C6031 di avviso di analisi del codice e come risolverlo.
+ms.date: 03/16/2020
 ms.topic: reference
 f1_keywords:
 - C6031
 helpviewer_keywords:
 - C6031
 ms.assetid: 59e1ef0a-b3ca-4ffa-bcb3-ad2bd22ece22
-ms.openlocfilehash: 4ccd21ebbeac923c2f97d6dce03190aebbc63133
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 705c5d9e1e58a4881fcd504c1d86bcc2cef7d3e5
+ms.sourcegitcommit: 44eeb065c3148d0484de791080a3f963109744fc
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420888"
+ms.lasthandoff: 03/18/2020
+ms.locfileid: "79509355"
 ---
 # <a name="c6031"></a>C6031
 
-> avviso C6031: valore restituito ignorato: \<funzione > può restituire un valore imprevisto
+> avviso C6031: valore restituito ignorato: la *funzione chiamata* può restituire un valore imprevisto
 
-Questo avviso indica che la funzione chiamante non sta controllando il valore restituito di una chiamata di funzione che segnala l'errore tramite il relativo valore restituito. A seconda della funzione chiamata, questo difetto può comportare un comportamento apparentemente casuale del programma, inclusi arresti anomali e danneggiamenti dei dati in condizioni di errore o in situazioni di risorse insufficienti.
+Questo avviso indica che il chiamante non verifica il valore restituito di una funzione in caso di errore. A seconda della funzione chiamata, questo difetto può comportare un comportamento apparentemente casuale del programma. Che include arresti anomali e danneggiamenti dei dati in condizioni di errore o in situazioni di risorse insufficienti.
 
-In generale, non è sicuro presupporre che una chiamata a una funzione che richiede disco, rete, memoria o altre risorse avrà sempre esito positivo. Il chiamante deve sempre controllare il valore restituito e gestire i casi di errore in modo appropriato. Si consiglia inoltre di utilizzare l'annotazione `_Must_inspect_result_`, che verifica che il valore venga esaminato in modo utile.
+In generale, non è sicuro presupporre che le chiamate alle funzioni che richiedono disco, rete, memoria o altre risorse possano avere esito positivo. Il chiamante deve sempre controllare il valore restituito e gestire i casi di errore in modo appropriato. Si consiglia inoltre di utilizzare l'annotazione `_Must_inspect_result_`, che verifica che il valore venga esaminato in modo utile.
 
 ## <a name="example"></a>Esempio
 
@@ -30,8 +31,8 @@ Il codice seguente genera questo avviso:
 #include <stdio.h>
 void f( )
 {
-  fopen( "test.c", "r" ); // return value ignored
-  // code ...
+    fopen( "test.c", "r" ); // C4996, C6031 return value ignored
+    // code ...
 }
 ```
 
@@ -41,10 +42,10 @@ Per correggere il problema, controllare il valore restituito della funzione, com
 #include <stdio.h>
 void f( )
 {
-  FILE *stream;
-  if((stream = fopen( "test.c", "r" )) == NULL )
-    return;
-  // code ...
+    FILE *stream;
+    if ( (stream = fopen( "test.c", "r" )) == NULL )
+        return;
+    // code ...
 }
 ```
 
@@ -54,20 +55,19 @@ Il codice seguente usa la funzione Safe `fopen_s` per correggere il problema:
 #include <stdio.h>
 void f( )
 {
-  FILE *stream;
-  errno_t err;
+    FILE *stream;
+    errno_t err;
 
-  if( (err  = fopen_s( &stream, "test.c", "r" )) !=0 )
-  {
-    // code ...
-  }
+    if ( (err = fopen_s( &stream, "test.c", "r" )) !=0 )
+    {
+        // code ...
+    }
 }
 ```
 
 Questo avviso viene generato anche se il chiamante ignora il valore restituito di una funzione annotata con la proprietà `_Check_return_` come illustrato nel codice seguente.
 
 ```cpp
-
 #include <sal.h>
 _Check_return_ bool func();
 
@@ -80,13 +80,12 @@ void test_f()
 Per correggere l'avviso precedente, controllare il valore restituito come illustrato nel codice seguente:
 
 ```cpp
-
 #include <sal.h>
 _Check_return_ bool func();
 
 void test_f()
 {
-    if( func() ) {
+    if ( func() ) {
         // code ...
     }
 }
@@ -94,5 +93,5 @@ void test_f()
 
 ## <a name="see-also"></a>Vedere anche
 
-- [fopen_s, _wfopen_s](/cpp/c-runtime-library/reference/fopen-s-wfopen-s)
-- [Uso delle annotazioni SAL per ridurre i difetti del codice](using-sal-annotations-to-reduce-c-cpp-code-defects.md)
+[fopen_s, _wfopen_s](/cpp/c-runtime-library/reference/fopen-s-wfopen-s)\
+[Uso delle annotazioni SAL per ridurre i difetti del codice](using-sal-annotations-to-reduce-c-cpp-code-defects.md)
