--- a/docs/code-quality/c6011.md
+++ b/docs/code-quality/c6011.md
@@ -1,28 +1,29 @@
 ---
 title: C6011
-ms.date: 11/04/2016
+description: Informazioni di riferimento sull' C++ avviso di analisi del codice di Visual Studio C6011.
+ms.date: 03/23/2020
 ms.topic: reference
 f1_keywords:
 - C6011
 helpviewer_keywords:
 - C6011
 ms.assetid: 54b7bc2b-b8f5-43fc-a9a3-8189b03f249a
-ms.openlocfilehash: f6f0cfc7cb35f80d9a57211020d91bd569afcd91
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 47b0bac661784c4ad4e58efdf6e3df6dc5669e54
+ms.sourcegitcommit: af1911ec1dea78878383d75350b8d165ebd155e5
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420937"
+ms.lasthandoff: 03/25/2020
+ms.locfileid: "80250933"
 ---
 # <a name="c6011"></a>C6011
 
 > avviso C6011: dereferenziazione del puntatore NULL \<nome >
 
-Questo avviso indica che è in corso la dereferenziazione di un puntatore null. Se il valore del puntatore non è valido, il risultato sarà indefinito.
+Questo avviso indica che il codice consente di dereferenziare un puntatore potenzialmente null. Se il valore del puntatore non è valido, il risultato sarà indefinito. Per risolvere il problema, convalidare il puntatore prima di usarlo.
 
 ## <a name="example"></a>Esempio
 
-Il codice seguente genera questo avviso perché una chiamata a malloc potrebbe restituire null se la memoria disponibile è insufficiente:
+Il codice seguente genera questo avviso perché una chiamata a `malloc` potrebbe restituire null se è disponibile memoria insufficiente:
 
 ```cpp
 #include <malloc.h>
@@ -54,7 +55,7 @@ void f( )
 }
 ```
 
-È necessario allocare memoria all'interno della funzione i cui parametri sono annotati utilizzando la proprietà null in una condizione preliminare prima di dereferenziare il parametro. Il codice seguente genera l'avviso C6011 perché viene effettuato un tentativo di dereferenziare un puntatore null (`pc`) all'interno della funzione senza prima allocare memoria:
+Le funzioni possono avere parametri annotati usando la proprietà `Null` in una condizione `Pre`. Allocare memoria all'interno di queste funzioni prima di dereferenziare il parametro. Il codice seguente genera l'avviso C6011 perché viene effettuato un tentativo di dereferenziare un puntatore null (`pc`) all'interno della funzione senza prima allocare memoria:
 
 ```cpp
 #include <sal.h>
@@ -66,7 +67,7 @@ void f([Pre(Null=Yes)] char* pc)
 }
 ```
 
-L'uso di malloc e Free presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL ( C++ Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+L'uso sconsiderato di `malloc` e `free` causa perdite di memoria ed eccezioni. Per ridurre al minimo questi tipi di perdite e problemi di eccezione, evitare di allocare la memoria non elaborata manualmente. Usare invece i meccanismi forniti dalla libreria C++ standard (STL). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
 
 ## <a name="see-also"></a>Vedere anche
 
