commit translated contents

--- a/docs/code-quality/c6054.md
+++ b/docs/code-quality/c6054.md
@@ -1,55 +1,59 @@
 ---
 title: C6054
-ms.date: 11/04/2016
+description: Guida di riferimento per l'avviso di analisi del codice Microsoft C++ C6054.
+ms.date: 04/22/2020
 ms.topic: reference
 f1_keywords:
 - C6054
 helpviewer_keywords:
 - C6054
 ms.assetid: d573a5c1-7e74-402b-92e6-8085f967aa50
-ms.openlocfilehash: d7d57b6d740f08107d15d607cad4db7467aa435b
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 17dcdb9d0e4824287db85282038f0e4c1e3ca15f
+ms.sourcegitcommit: 0e3f532fd5206d8b849f16f8d0f8792c29832622
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420825"
+ms.lasthandoff: 04/23/2020
+ms.locfileid: "82105355"
 ---
 # <a name="c6054"></a>C6054
 
-> avviso C6054: la stringa \<variabile > non può terminare con zero
+> avviso C6054: la \<variabile di stringa> non può terminare con zero
 
-Questo avviso indica che a una funzione che richiede una stringa con terminazione zero è stata passata una stringa con terminazione diversa da zero. Una funzione che prevede una stringa con terminazione zero andrà oltre la fine del buffer per cercare lo zero. Questo difetto può causare un errore di sovraccarico del buffer sfruttabile o un arresto anomalo. Il programma deve assicurarsi che la stringa termini con uno zero.
+## <a name="remarks"></a>Osservazioni
+
+Questo avviso indica che a una funzione che richiede una stringa con terminazione zero è stata passata una stringa con terminazione diversa da zero. Una funzione che prevede una stringa con terminazione zero potrebbe cercare lo zero oltre la fine del buffer. Questo difetto può causare un errore di sovraccarico del buffer sfruttabile o un arresto anomalo. Il programma deve verificare che la stringa passata termini con uno zero.
 
 ## <a name="example"></a>Esempio
 
 Il codice seguente genera questo avviso:
 
 ```cpp
-
+// C6054_bad.cpp
+// Compile using: cl /W4 /EHsc /c /analyze C6054_bad.cpp
 #include <sal.h>
 
 void func( _In_z_ wchar_t* wszStr );
 
 void g ( )
 {
-    wchar_t wcArray[200];
+    wchar_t wcArray[200] = { 'h', 'e', 'l', 'l', 'o' };
     func(wcArray); // Warning C6054
 }
 ```
 
-Per correggere il problema, terminare con null `wcArray` prima di chiamare la funzione `func()`, come illustrato nel codice di esempio seguente:
+Per correggere il problema, terminare `wcArray` con null prima di chiamare `func()` la funzione, come illustrato nel codice di esempio seguente:
 
 ```cpp
-
+// C6054_good.cpp
+// Compile using: cl /W4 /EHsc /c /analyze C6054_good.cpp
 #include <sal.h>
 
 void func( _In_z_ wchar_t* wszStr );
 
-void g( )
+void g ( )
 {
-    wchar_t wcArray[200];
-    wcArray[0]= '\0';
-    func(wcArray);
+    wchar_t wcArray[200] = { 'h', 'e', 'l', 'l', 'o', '\0' };
+    func(wcArray); // OK
 }
 ```
 
