commit translated contents

--- a/docs/code-quality/c26481.md
+++ b/docs/code-quality/c26481.md
@@ -1,25 +1,45 @@
 ---
 title: C26481
-ms.date: 07/21/2017
+ms.date: 04/29/2020
 ms.topic: conceptual
 f1_keywords:
 - C26481
 helpviewer_keywords:
 - C26481
 ms.assetid: 4fd8694d-b45b-4163-b2d5-88c4889d00ed
-ms.openlocfilehash: e6d57a79803f928be2c5f2a919f111e509d8325f
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 2fdc638251b54487dbe674f130ad9667e3d9b538
+ms.sourcegitcommit: f5d1c439e84805a95404955cbd1c690e0382c672
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416842"
+ms.lasthandoff: 04/30/2020
+ms.locfileid: "82599704"
 ---
 # <a name="c26481-no_pointer_arithmetic"></a>NO_POINTER_ARITHMETIC C26481
 
-Questo controllo supporta la regola i *. 13: non passare una matrice come singolo puntatore*. Ogni volta che i puntatori non elaborati vengono utilizzati nelle operazioni aritmetiche, è necessario sostituirli con tipi di buffer più sicuri, ad esempio `span<T>` o `vector<T>`.
+> avviso C26481: non usare l'aritmetica del puntatore. Usare invece span (Bounds. 1).
 
-## <a name="remarks"></a>Note
+## <a name="remarks"></a>Osservazioni
 
-- Questo controllo è leggermente più restrittivo rispetto a I. 13: non ignora I tipi zstring o czstring.
+Questo controllo supporta la regola di [linee guida di base di C++](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md) [i. 13](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Ri-array): *non passare una matrice come singolo puntatore*. Ogni volta che i puntatori non elaborati vengono utilizzati nelle operazioni aritmetiche, è necessario sostituirli con tipi `span<T>` di `vector<T>`buffer più sicuri, ad esempio o.
 
-- C26481 e C26485 provengono dalle regole del [profilo di sicurezza dei limiti](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md) implementate nella prima versione del C++ controllo delle linee guida di base. Sono applicabili alla categoria dei puntatori non elaborati, poiché consentono di evitare l'utilizzo non sicuro di puntatori non elaborati.
+Questo controllo è più restrittivo di I. 13: non ignora `zstring` I tipi o `czstring` .
+
+C26481 e [C26485](c26485.md) provengono dalle regole del [profilo di protezione dei limiti](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-bounds) . Queste regole sono state implementate nella prima versione del controllo Linee guida di base di C++. Sono applicabili alla categoria dei puntatori non elaborati, poiché consentono di evitare l'utilizzo non sicuro di puntatori non elaborati.
+
+## <a name="example"></a>Esempio
+
+Questo esempio genera un avviso per l'aritmetica dei puntatori.
+
+```cpp
+// c26481_bad.cpp
+// compile using:
+// set Esp.Extensions=CppCoreCheck.dll
+// cl /W3 /EHsc /permissive- /analyze /analyze:plugin EspXEngine.dll /analyze:ruleset "%VSINSTALLDIR%\Team Tools\Static Analysis Tools\Rule Sets\CppCoreCheckBoundsRules.ruleset" c26481_bad.cpp
+
+int main() noexcept
+{
+    int * from_array = new int(10);
+    int * later_array = from_array + 1;
+    delete[](from_array);
+}
+```
