--- a/docs/code-quality/c26485.md
+++ b/docs/code-quality/c26485.md
@@ -1,23 +1,50 @@
 ---
 title: C26485
-ms.date: 07/21/2017
+ms.date: 04/29/2020
 ms.topic: conceptual
 f1_keywords:
 - C26485
 helpviewer_keywords:
 - C26485
 ms.assetid: 8915ad2d-7fd6-4bbc-abe4-0b3292ea2170
-ms.openlocfilehash: c32cd236a0d448f852feddfd7929cf4535316d0d
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: d0e16ed15f668f2474c3f7965313927b626197b7
+ms.sourcegitcommit: f5d1c439e84805a95404955cbd1c690e0382c672
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416821"
+ms.lasthandoff: 04/30/2020
+ms.locfileid: "82599691"
 ---
-# <a name="c26485-no_array_to_pointer_decay"></a>NO_ARRAY_TO_POINTER_DECAY C26485
+# <a name="c26485-no_array_to_pointer_decay"></a>C26485 NO_ARRAY_TO_POINTER_DECAY
 
-Analogamente a C26481, questo controllo consente di applicare la regola i. 13: *non passare una matrice come puntatore singolo* individuando le posizioni in cui le informazioni sul tipo di matrice statica vengono perse a causa del decadimento di un puntatore non elaborato. i tipi zstring e czstring non sono esclusi.
+> avviso C26485: espressione '*Array-name*': nessuna matrice per il puntatore a decadimento (Bounds. 3).
 
-## <a name="remarks"></a>Note
+## <a name="remarks"></a>Osservazioni
 
-C26481 e C26485 provengono dalle regole del [profilo di sicurezza dei limiti](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md) implementate nella prima versione del C++ controllo delle linee guida di base. Sono applicabili alla categoria dei puntatori non elaborati, poiché consentono di evitare l'utilizzo non sicuro di puntatori non elaborati.
+Analogamente a [C26481](c26481.md), questo controllo consente di applicare la regola di [linee guida di base di C++](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md) [i. 13](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Ri-array): *non passare una matrice come un singolo puntatore*. La regola rileva le posizioni in cui le informazioni sul tipo di matrice statica vengono perse dal decadimento a un puntatore non elaborato. I `zstring` tipi `czstring` e non sono esclusi.
+
+C26481 e C26485 provengono dalle regole del [profilo di protezione dei limiti](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-bounds) . Queste regole sono state implementate nella prima versione del controllo Linee guida di base di C++. Sono applicabili alla categoria dei puntatori non elaborati, poiché consentono di evitare l'utilizzo non sicuro di puntatori non elaborati.
+
+## <a name="example"></a>Esempio
+
+Questo esempio genera due avvisi per la decadenza della matrice nel puntatore nella `memcpy`chiamata a.
+
+```cpp
+// c26485_bad.cpp
+// compile using:
+// set Esp.Extensions=CppCoreCheck.dll
+// cl /W4 /EHsc /permissive- /analyze /analyze:plugin EspXEngine.dll /analyze:ruleset "%VSINSTALLDIR%\Team Tools\Static Analysis Tools\Rule Sets\CppCoreCheckBoundsRules.ruleset" c26485_bad.cpp
+#include <cstring>
+constexpr int array_length = 10;
+
+int main() noexcept
+{
+    int const from_array[array_length] = { 4, 3, 2, 1, 0, 9, 8, 7, 6, 5 };
+    int to_array[array_length] = {};
+
+    if (nullptr != memcpy(to_array, from_array, sizeof(int) * array_length))
+        return 0;
+    return 1;
+}
+```
+
+Per risolvere questo problema, evitare chiamate che accettano parametri del puntatore, ma non gestiscono le informazioni sui limiti. L'utilizzo di tali funzioni è spesso soggetto a errori. Preferisce le chiamate della libreria standard C++ alle funzioni della libreria di runtime C. Prendere in `gsl::span` considerazione `std::vector` l'uso di o nelle funzioni personalizzate. Un cast esplicito al tipo di puntatore in decadimento impedisce l'avviso, ma non impedisce il codice difettoso.
