--- a/docs/error-messages/compiler-warnings/c4473.md
+++ b/docs/error-messages/compiler-warnings/c4473.md
@@ -5,16 +5,22 @@ f1_keywords:
 - C4473
 helpviewer_keywords:
 - C4473
-ms.openlocfilehash: a1d46676dddf3089dc573be9e84fe0779fb18c87
-ms.sourcegitcommit: 8762a3f9b5476b4dee03f0ee8064ea606550986e
+ms.openlocfilehash: a6f7dc7998d8b7da30c3b060111a64959cd60d75
+ms.sourcegitcommit: 6b749db14b4cf3a2b8d581fda6fdd8cb98bc3207
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 12/04/2019
-ms.locfileid: "74810702"
+ms.lasthandoff: 05/05/2020
+ms.locfileid: "82825743"
 ---
 # <a name="compiler-warning-level-1-c4473"></a>Avviso del compilatore (livello 1) C4473
 
-> '*Function*': non sono stati passati argomenti sufficienti per i segnaposto di stringa di formato e i relativi parametri prevedono argomenti di *numero* Variadic, ma è stato specificato un *numero* che indica che l' *Indice* dell'argomento Variadic mancante è richiesto dalla stringa di formato '*FORMAT_STRING*'. questo argomento viene usato da un identificatore di conversione. questo argomento viene usato come larghezza di campo.
+> '*Function*': argomenti insufficienti passati per la stringa di formato \
+> i segnaposto e i relativi parametri prevedono argomenti *numerici* Variadic, ma sono stati specificati *numeri* \
+> l' *Indice* dell'argomento Variadic mancante è richiesto dalla stringa di formato '*FORMAT_STRING*' \
+> questo argomento viene usato da un identificatore di conversione \
+> questo argomento viene usato come larghezza del campo \
+> questo argomento viene utilizzato come precisione \
+> questo argomento viene usato come dimensione del buffer
 
 Il compilatore ha rilevato una mancata corrispondenza tra il numero di argomenti necessari per soddisfare i segnaposto in una stringa di formato e il numero di argomenti forniti. Per utilizzare correttamente le famiglie printf e scanf delle funzioni Variadic, è necessario specificare tutti gli argomenti specificati dalla stringa di formato. Alcuni segnaposto richiedono argomenti aggiuntivi, per specificare la larghezza, la precisione o la dimensione del buffer, nonché un argomento per il contenuto. Una mancata corrispondenza indica in genere la presenza di un bug nel codice.
 
@@ -38,7 +44,7 @@ void print_func(int a, float f)
 }
 ```
 
-Nel primo messaggio di errore, il compilatore rileva che manca un argomento, ma non può determinare se l'argomento mancante è la larghezza o il contenuto, quindi presuppone che l'argomento fornito sia il primo, per la larghezza e che l'argomento mancante sia il secondo , per l'identificatore di conversione del tipo. È necessario esaminare la stringa di formato per determinare l'argomento mancante effettivo.
+Nel primo messaggio di errore, il compilatore rileva che manca un argomento, ma non può determinare se l'argomento mancante è la larghezza o il contenuto, quindi presuppone che l'argomento fornito sia il primo, per la larghezza e l'argomento mancante è il secondo, per l'identificatore di conversione del tipo. È necessario esaminare la stringa di formato per determinare l'argomento mancante effettivo.
 
 ```cpp
 // c4473s.cpp
