commit translated contents

--- a/docs/error-messages/compiler-warnings/c5045.md
+++ b/docs/error-messages/compiler-warnings/c5045.md
@@ -5,22 +5,22 @@ f1_keywords:
 - C5045
 helpviewer_keywords:
 - C5045
-ms.openlocfilehash: cd1d4319a832f988e33009b7fd1d1f3ba1764868
-ms.sourcegitcommit: 8762a3f9b5476b4dee03f0ee8064ea606550986e
+ms.openlocfilehash: a3190be658472f208ae527976e85d678805cea4e
+ms.sourcegitcommit: 3f91111c0350c0237fddb82766c290307f20e659
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 12/04/2019
-ms.locfileid: "74810582"
+ms.lasthandoff: 05/19/2020
+ms.locfileid: "83630511"
 ---
 # <a name="compiler-warning-c5045"></a>Avviso del compilatore C5045
 
 > Il compilatore inserirà la mitigazione Spectre per il carico di memoria se è stata specificata l'opzione/Qspectre
 
-## <a name="remarks"></a>Note
+## <a name="remarks"></a>Osservazioni
 
 Avviso C5045 consente di vedere quali modelli nel codice provocano l'inserimento di una mitigazione Spectre, ad esempio un LFENCE, quando viene specificata l'opzione del compilatore [/Qspectre](../../build/reference/qspectre.md) . In questo modo è possibile identificare i file di codice interessati dal problema di sicurezza. Questo avviso è puramente informativo: la mitigazione non viene inserita fino a quando non si esegue la ricompilazione con l'opzione **/Qspectre** . La funzionalità di C5045 è indipendente dall'opzione **/Qspectre** , quindi è possibile usarla nella stessa compilazione.
 
-Questo avviso è nuovo in Visual Studio 2017 versione 15,7 ed è disattivato per impostazione predefinita. Usare [/Wall](../../build/reference/compiler-option-warning-level.md) per abilitare tutti gli avvisi che sono disattivati per impostazione predefinita oppure __/w__*n*__5038__ per abilitare C5045 come avviso di livello *n* . Nell'IDE, il livello di avviso predefinito è **/W3** e questo avviso può essere abilitato nella finestra di dialogo **pagine delle proprietà** del progetto. Aprire **proprietà di configurazione** > riga di **comando** di **C++ C/**  > e nella casella **Opzioni aggiuntive** aggiungere */w35045*, quindi scegliere **OK**. Per ulteriori informazioni, vedere [avvisi del compilatore disattivati per impostazione predefinita](../../preprocessor/compiler-warnings-that-are-off-by-default.md). Per informazioni su come disabilitare gli avvisi in base alla versione del compilatore, vedere [avvisi del compilatore in base alla versione del](compiler-warnings-by-compiler-version.md)compilatore.
+Questo avviso è nuovo in Visual Studio 2017 versione 15,7 ed è disattivato per impostazione predefinita. Usare [/Wall](../../build/reference/compiler-option-warning-level.md) per abilitare tutti gli avvisi che sono disattivati per impostazione predefinita oppure __/w__*n*__5045__ per abilitare C5045 come avviso di livello *n* . Nell'IDE, il livello di avviso predefinito è **/W3** e questo avviso può essere abilitato nella finestra di dialogo **pagine delle proprietà** del progetto. Aprire **Configuration Properties**  >  la riga di comando**C/C++**  >  **Command Line** delle proprietà di configurazione e nella casella **Opzioni aggiuntive** aggiungere */w35045*, quindi scegliere **OK**. Per ulteriori informazioni, vedere [avvisi del compilatore disattivati per impostazione predefinita](../../preprocessor/compiler-warnings-that-are-off-by-default.md). Per informazioni su come disabilitare gli avvisi in base alla versione del compilatore, vedere [avvisi del compilatore in base alla versione del](compiler-warnings-by-compiler-version.md)compilatore.
 
 ## <a name="example"></a>Esempio
 
@@ -86,6 +86,6 @@ I messaggi di avviso indicano che è stata inserita una mitigazione nella riga 1
 
 ## <a name="see-also"></a>Vedere anche
 
-[Materiale sussidiario per sviluppatori C++ - Minacce Speculative Execution Side Channel](../../security/developer-guidance-speculative-execution.md)<br/>
+[Linee guida per sviluppatori C++ per canali laterali di esecuzione speculativa](../../security/developer-guidance-speculative-execution.md)<br/>
 [/Qspectre](../../build/reference/qspectre.md)<br/>
 [spectre](../../cpp/spectre.md)
