commit translated contents

--- a/docs/code-quality/c26452.md
+++ b/docs/code-quality/c26452.md
@@ -1,7 +1,7 @@
 ---
 title: C26452
-keywords: C26452
-ms.date: 01/08/2017
+description: Descrive le cause dell'avviso C26452 di analisi del codice MSVC e come risolvere il problema.
+ms.date: 07/15/2020
 ms.topic: reference
 f1_keywords:
 - C26452
@@ -9,17 +9,19 @@ helpviewer_keywords:
 - C26452
 dev_langs:
 - C++
-ms.openlocfilehash: ce3bed3f2909dcdcb77031768e87c8c42b02e949
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: 9ca3a8892da8e4b2aca250c0e1b237598f9986cc
+ms.sourcegitcommit: e15b46ea7888dbdd7e0bb47da76aeed680c3c1f3
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81365031"
+ms.lasthandoff: 07/17/2020
+ms.locfileid: "86446688"
 ---
-# <a name="arithmetic-overflow-left-shift-count-is-negative-or-greater-than-or-equal-to-the-operand-size-which-is-undefined-behavior"></a>Overflow aritmetico: il numero di spostamenti a sinistra è negativo o maggiore o uguale alla dimensione dell'operando che è un comportamento indefinito
+# <a name="warning-c26452"></a>Avviso C26452
 
-Questo avviso indica che il conteggio degli spostamenti è negativo o maggiore o uguale al numero di bit dell'operando da spostare, con conseguente comportamento indefinito.
-Nota: L'c4293 è un segno di spunta simile nel compilatore Microsoft C.
+> Overflow aritmetico: il conteggio di spostamento a sinistra è negativo o maggiore o uguale alla dimensione dell'operando, che è un comportamento non definito
+
+Questo avviso indica che il conteggio dello spostamento è negativo oppure maggiore o uguale al numero di bit nell'operando spostato. Entrambi i casi generano un comportamento non definito.
+C4293 è un controllo simile nel compilatore Microsoft C++.
 
 ## <a name="example"></a>Esempio
 
@@ -30,15 +32,15 @@ unsigned __int64 combine(unsigned lo, unsigned hi)
 }
 ```
 
-Per correggere questo avviso, utilizzare il codice seguente:To correct this warning, use the following code:
+Per correggere il problema, usare il codice seguente:
 
 ```cpp
 unsigned __int64 combine(unsigned lo, unsigned hi)
 {
-  return ((unsigned __int64)hi << 32) | lo; // OK
+  return (static_cast<unsigned __int64>(hi) << 32) | lo; // OK
 }
 ```
 
 ## <a name="see-also"></a>Vedere anche
 
-[ES.102: Utilizzare tipi con segno per l'aritmetica](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-unsigned)
+[ES. 102: usare i tipi con segno per l'aritmetica](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-unsigned)
