--- a/docs/code-quality/c26453.md
+++ b/docs/code-quality/c26453.md
@@ -1,7 +1,7 @@
 ---
 title: C26453
-keywords: C26453
-ms.date: 01/08/2017
+description: Descrive le cause dell'avviso C26453 di analisi del codice MSVC e Mostra come risolverlo.
+ms.date: 07/15/2020
 ms.topic: reference
 f1_keywords:
 - C26453
@@ -9,16 +9,18 @@ helpviewer_keywords:
 - C26453
 dev_langs:
 - C++
-ms.openlocfilehash: 14390632ab01d3025ba6bd46a76c47e4e573d477
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: bb3f00a6b7c421529944d127b0a4b455a6b75b29
+ms.sourcegitcommit: e15b46ea7888dbdd7e0bb47da76aeed680c3c1f3
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81365631"
+ms.lasthandoff: 07/17/2020
+ms.locfileid: "86446727"
 ---
-# <a name="warning-c26453-arithmetic-overflow-left-shift-of-a-negative-signed-number-is-undefined-behavior"></a>Avviso C26453: Overflow aritmetico: lo spostamento a sinistra di un numero con segno negativo è un comportamento indefinito
+# <a name="warning-c26453"></a>Avviso C26453
 
-Questo avviso indica che si sposta a sinistra un valore integrale con segno negativo, che è una cattiva idea e attiva il comportamento definito dall'implementazione.
+> Overflow aritmetico: lo spostamento a sinistra di un numero con segno negativo è un comportamento non definito
+
+Questo avviso indica che il codice a sinistra sposta un valore integrale con segno negativo, ovvero un comportamento definito dall'implementazione di trigger e non portabili.
 
 ## <a name="example"></a>Esempio
 
@@ -31,12 +33,12 @@ void leftshift(int shiftCount)
 }
 ```
 
-Per correggere questo avviso, utilizzare il codice seguente:To correct this warning, use the following code:
+Per correggere il problema, usare il codice seguente:
 
 ```cpp
 void leftshift(int shiftCount)
 {
-  const auto result = ((unsigned)-1) << shiftCount; // OK
+  const auto result = static_cast<unsigned>(-1) << shiftCount; // OK
 
   // code
 }
@@ -44,4 +46,4 @@ void leftshift(int shiftCount)
 
 ## <a name="see-also"></a>Vedere anche
 
-[ES.102: Utilizzare tipi con segno per l'aritmetica](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-unsigned)
+[ES. 102: usare i tipi con segno per l'aritmetica](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-unsigned)
