--- a/docs/code-quality/c6297.md
+++ b/docs/code-quality/c6297.md
@@ -1,28 +1,30 @@
 ---
 title: C6297
-ms.date: 11/04/2016
-ms.topic: reference
+description: Descrive le cause dell'avviso C26452 di analisi del codice MSVC e come risolvere il problema.
+ms.date: 07/15/2020
 f1_keywords:
 - C6297
 helpviewer_keywords:
 - C6297
 ms.assetid: 17b585f0-75e5-4fc0-935a-143ec67659f4
-ms.openlocfilehash: 70f439d3af0f445171e800d0efe1968995626c64
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: a5c467292bc87dd81dcc79d57646c20d7f84e309
+ms.sourcegitcommit: e15b46ea7888dbdd7e0bb47da76aeed680c3c1f3
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419950"
+ms.lasthandoff: 07/17/2020
+ms.locfileid: "86446675"
 ---
-# <a name="c6297"></a>C6297
+# <a name="warning-c6297"></a>Avviso C6297
 
-> avviso C6297: overflow aritmetico: il valore a 32 bit viene spostato, quindi viene eseguito il cast a un valore a 64 bit. Il risultato non può essere un valore previsto
+> Overflow aritmetico: il valore a 32 bit viene spostato, quindi viene eseguito il cast a un valore a 64 bit. Il risultato non può essere un valore previsto
 
-Questo avviso indica un comportamento errato risultante dalle regole di promozione integrale e dai tipi maggiori di quelli in cui viene in genere eseguita l'aritmetica.
+## <a name="remarks"></a>Commenti
+
+Questo avviso indica un comportamento errato risultante dalle regole di promozione integrale e dai tipi più grandi di quelli in cui viene in genere eseguita l'aritmetica.
 
 In questo caso, un valore a 32 bit è stato spostato a sinistra e il risultato di tale turno è stato eseguito il cast a un valore a 64 bit. Se lo spostamento ha causato l'overflow del valore a 32 bit, i bit andranno perduti.
 
-Se non si desidera perdere bit, eseguire il cast del valore per passare a una quantità di 64 bit prima che venga spostata. Se si desidera perdere bit, eseguire il cast appropriato a un tipo unsigned long o short oppure mascherare il risultato dello spostamento eliminerà questo avviso e renderà più chiaro lo scopo del codice.
+Se non si desidera perdere bit, eseguire il cast del valore per passare a una quantità di 64 bit prima che venga spostata. Se si desidera perdere bit, eseguire il cast appropriato a `unsigned long` o a un `short` tipo. In alternativa, mascherare il risultato dello spostamento. Uno degli approcci Elimina questo avviso e rende lo scopo del codice più chiaro.
 
 ## <a name="example"></a>Esempio
 
@@ -45,7 +47,7 @@ void f(int i)
 {
   unsigned __int64 x;
   // code
-  x = ((unsigned __int64)i) << 34;
+  x = static_cast<unsigned __int64>(i) << 34;
 }
 ```
 
