--- a/docs/code-quality/c26451.md
+++ b/docs/code-quality/c26451.md
@@ -1,7 +1,7 @@
 ---
 title: C26451
-keywords: C26451
-ms.date: 01/08/2017
+description: Descrive le cause dell'avviso C26451 di analisi del codice MSVC e Mostra come risolverlo.
+ms.date: 07/15/2020
 ms.topic: reference
 f1_keywords:
 - C26451
@@ -9,25 +9,29 @@ helpviewer_keywords:
 - C26451
 dev_langs:
 - C++
-ms.openlocfilehash: 843af189f17ddac598ff86e8dc7c2599b37e80e9
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: a4ea194b21adaf121fcac4aa66d80eb0ccc4f750
+ms.sourcegitcommit: e15b46ea7888dbdd7e0bb47da76aeed680c3c1f3
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418123"
+ms.lasthandoff: 07/17/2020
+ms.locfileid: "86446713"
 ---
-# <a name="warning-c26451-arithmetic-overflow-using-operator-operator-on-a-size1-byte-value-and-then-casting-the-result-to-a-size2-byte-value-cast-the-value-to-the-wider-type-before-calling-operator-operator-to-avoid-overflow"></a>Avviso C26451: overflow aritmetico: utilizzo dell'operatore '% operator%' in un valore% Size1% byte, quindi eseguire il cast del risultato a un valore di% size2% byte. Eseguire il cast del valore al tipo più ampio prima di chiamare l'operatore '% operator%' per evitare l'overflow
+# <a name="warning-c26451"></a>Avviso C26451
 
-Questo avviso indica un comportamento errato risultante dalle regole di promozione integrale e dai tipi maggiori di quelli in cui viene in genere eseguita l'aritmetica.
+> Overflow aritmetico: l'uso dell'operatore '*operator*' su un valore di byte di *dimensioni* e quindi il cast del risultato a un valore byte *size-b* . Eseguire il cast del valore al tipo più ampio prima di chiamare l'operatore '*operator*' per evitare l'overflow
 
-Viene rilevato quando un valore integrale di tipo Narrow è stato spostato a sinistra, moltiplicato, aggiunto o sottratto e il risultato dell'operazione aritmetica è stato eseguito il cast a un valore di tipo più ampio. Se l'operazione ha causato un overflow del valore del tipo narrow, i dati andranno perduti. È possibile evitare questa perdita eseguendo il cast del valore a un tipo più ampio prima dell'operazione aritmetica.
+Questo avviso indica un comportamento errato risultante dalle regole di promozione integrale e dai tipi più grandi di quelli in cui viene in genere eseguita l'aritmetica.
+
+## <a name="remarks"></a>Commenti
+
+L'analisi del codice rileva quando un valore integrale viene spostato a sinistra, moltiplicato, aggiunto o sottratto e viene eseguito il cast del risultato a un tipo integrale più ampio. Se l'operazione ha un overflow del tipo integrale più piccolo, i dati andranno perduti. È possibile evitare questa perdita eseguendo il cast del valore a un tipo più ampio prima dell'operazione aritmetica.
 
 ## <a name="example-1"></a>Esempio 1
 
 Il codice seguente genera questo avviso:
 
 ```cpp
-void leftshift(int i)
+void leftshift(int i) noexcept
 {
   unsigned __int64 x;
   x = i << 31;  // C26451 reported here
@@ -39,10 +43,10 @@ void leftshift(int i)
 Per correggere il problema, usare il codice seguente:
 
 ```cpp
-void leftshift(int i)
+void leftshift(int i) noexcept
 {
   unsigned __int64 x;
-  x = (unsigned __int64)i << 31; // OK
+  x = static_cast<unsigned __int64>(i) << 31; // OK
 
   // code
 }
@@ -51,28 +55,28 @@ void leftshift(int i)
 ## <a name="example-2"></a>Esempio 2
 
 ```cpp
-void somefunc(__int64 y);
+void somefunc(__int64 /* y */) noexcept
+{}
 
-void callsomefunc(int x)
+void callsomefunc(int x) noexcept
 {
   somefunc(x * 2); // C26451 reported here
-
 }
 ```
 
 Per correggere il problema, usare il codice seguente:
 
 ```cpp
-void callsomefunc(int x)
+void callsomefunc(int x) noexcept
 {
-  somefunc((__int64)x * 2); // OK
+  somefunc(static_cast<__int64>(x) * 2); // OK
 }
 ```
 
 ## <a name="example-3"></a>Esempio 3
 
 ```cpp
-__int64 add(int x)
+__int64 add(int x) noexcept
 {
   constexpr auto value = 2;
   return x += value; // C26451 reported here
@@ -82,10 +86,10 @@ __int64 add(int x)
 Per correggere il problema, usare il codice seguente:
 
 ```cpp
-__int64 add(int x)
+__int64 add(int x) noexcept
 {
   constexpr auto value = 2;
-  const __int64 y = (__int64)x + value; // OK
+  const __int64 y = static_cast<__int64>(x) + value; // OK
   return y;
 }
 ```
