--- a/docs/code-quality/c6200.md
+++ b/docs/code-quality/c6200.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - C6200
 ms.assetid: bbeb159b-4e97-4317-9a07-bb83cd03069a
-ms.openlocfilehash: 0bb9256545face73c74623b48f8dc895dcd08fba
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 1d6b949c243fcf76f62d5e666cbd8e4aa821f9b9
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420755"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87227738"
 ---
 # <a name="c6200"></a>C6200
 
-> avviso C6200: il nome dell'indice \<> non è compreso nell'intervallo di indici validi \<min > a \<massimo > per la variabile \<del buffer non dello stack >
+> avviso C6200: l'indice \<name> non è compreso nell'intervallo valido per il \<min> \<max> buffer non dello stack\<variable>
 
 Questo avviso indica che un offset integer nella matrice specificata supera i limiti massimi di tale matrice. Questo difetto può causare un comportamento casuale o un arresto anomalo.
 
-Una delle cause comuni di questo difetto è l'uso della dimensione di una matrice come indice nella matrice. Poiché l'indicizzazione di C/C++ array è in base zero, l'indice massimo consentito in una matrice è inferiore al numero di elementi della matrice.
+Una delle cause comuni di questo difetto è l'uso della dimensione di una matrice come indice nella matrice. Poiché l'indicizzazione delle matrici C/C++ è in base zero, l'indice massimo consentito in una matrice è inferiore al numero di elementi della matrice.
 
 ## <a name="example"></a>Esempio
 
-Il codice seguente genera questo avviso perché il ciclo di `for` supera l'intervallo di indici:
+Il codice seguente genera questo avviso perché il **`for`** ciclo supera l'intervallo di indici:
 
 ```cpp
 int buff[14]; // array of 0..13 elements
