--- a/docs/code-quality/c6279.md
+++ b/docs/code-quality/c6279.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - C6279
 ms.assetid: 0af88b58-35df-456f-8c02-e8eeffe3b7de
-ms.openlocfilehash: 858f72bcda29bc82d2d63aafc2fc88fbdfb3f8bb
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: a1bc007a24bd6fa903e6fc479ceddcbb36a50862
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420209"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87188180"
 ---
 # <a name="c6279"></a>C6279
 
-> avviso C6279: \<variabile > allocata con Scalar New, Deleted with array delete []
+> avviso C6279: \<variable> allocato con nuovo scalare, eliminato con matrice delete []
 
-Questo avviso viene visualizzato solo C++ nel codice e indica che la funzione chiamante ha una memoria allocata in modo incoerente con l'operatore **New** scalare, ma è stata liberata con l'operatore array **Delete []** . Se la memoria viene allocata con il **nuovo**scalare, deve essere in genere liberata con l' **eliminazione**scalare.
+Questo avviso viene visualizzato solo nel codice C++ e indica che la funzione chiamante ha allocato una memoria incoerente con l'operatore scalare **`new`** , ma lo ha liberato con l'operatore array **Delete []** . Se la memoria viene allocata con scalare **`new`** , deve essere in genere liberata con scalare **`delete`** .
 
 Esistono almeno tre motivi per cui è probabile che si verifichino problemi:
 
 - I costruttori per i singoli oggetti nella matrice non vengono richiamati, sebbene i distruttori siano.
 
-- Se gli **operatori new** e Operator **Delete** globali (o specifici della classe) non sono compatibili con **operator new []** e **operator delete []** , è probabile che si verifichino risultati imprevisti.
+- Se gli **operatori new** e Operator **Delete** globali (o specifici della classe) non sono compatibili con **operator new []** e **operator delete []**, è probabile che si verifichino risultati imprevisti.
 
 Le conseguenze esatte di questo difetto sono difficili da prevedere. Potrebbe provocare un arresto anomalo o un comportamento casuale a causa dell'utilizzo della memoria non inizializzata perché i costruttori non vengono richiamati. In alternativa, potrebbero verificarsi allocazioni di memoria e arresti anomali in situazioni in cui gli operatori sono stati sottoposti a override. In rari casi, la mancata corrispondenza potrebbe non essere importante. Lo strumento di analisi attualmente non distingue tra queste situazioni.
 
@@ -57,7 +57,7 @@ void f( )
 }
 ```
 
-Per evitare interamente questi tipi di problemi di allocazione, utilizzare i meccanismi forniti dalla libreria Standard Template Library (STL) di C++. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+Per evitare interamente questi tipi di problemi di allocazione, utilizzare i meccanismi forniti dalla libreria Standard Template Library (STL) di C++. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
 
 ## <a name="see-also"></a>Vedere anche
 
