commit translated contents

--- a/docs/code-quality/c6278.md
+++ b/docs/code-quality/c6278.md
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - C6278
 ms.assetid: 5cc3c393-c48a-4f91-9f38-03d7868be5e5
-ms.openlocfilehash: bf66c423c37aa81d677a05c4aacc9aa9935acd5e
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 72a0cd429f9f93fa3d8ed07358dd337d29a0bad8
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420223"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87188479"
 ---
 # <a name="c6278"></a>C6278
 
-> avviso C6278: \<variabile > viene allocata con la matrice New [], ma eliminata con l'eliminazione scalare. I distruttori non verranno chiamati
+> avviso C6278: \<variable> viene allocato con la matrice New [], ma viene eliminato con l'eliminazione scalare. I distruttori non verranno chiamati
 
-Questo avviso viene visualizzato solo C++ nel codice e indica che la funzione chiamante contiene una memoria allocata in modo incoerente con l'operatore di matrice **New []** , ma è stata liberata con l'operatore di **eliminazione** scalare. Si tratta di un C++ comportamento non definito in base all'implementazione standard C++ e Microsoft. Esistono almeno tre motivi per cui è probabile che si verifichino problemi:
+Questo avviso viene visualizzato solo nel codice C++ e indica che la funzione chiamante ha una memoria allocata in modo incoerente con l'operatore di matrice **New []** , ma è stata liberata con l'operatore scalare **`delete`** . Si tratta di un comportamento non definito in base allo standard C++ e all'implementazione di Microsoft C++. Esistono almeno tre motivi per cui è probabile che si verifichino problemi:
 
 - Vengono richiamati i costruttori per i singoli oggetti della matrice, ma i distruttori non vengono richiamati.
 
-- Se il livello globale, o specifico della classe, **operator new** e **operator delete** non sono compatibili con **operator new []** e **operator delete []** , è probabile che si verifichino risultati imprevisti.
+- Se il livello globale, o specifico della classe, **operator new** e **operator delete** non sono compatibili con **operator new []** e **operator delete []**, è probabile che si verifichino risultati imprevisti.
 
 - È sempre rischioso affidarsi a un comportamento non definito.
 
 Le conseguenze esatte di questo difetto sono difficili da prevedere. Potrebbe causare perdite per le classi con distruttori che eseguono la deallocazione di memoria; comportamento incoerente per le classi con distruttori che eseguono un'operazione semanticamente significativa; o danneggiamenti e arresti anomali della memoria quando gli operatori sono stati sottoposti a override. In altri casi la mancata corrispondenza potrebbe non essere importante, a seconda dell'implementazione del compilatore e delle librerie. Lo strumento di analisi non può sempre distinguere tra queste situazioni.
 
-Se la memoria viene allocata con array **New []** , deve essere in genere liberata con array **Delete []** .
+Se la memoria viene allocata con array **New []**, deve essere in genere liberata con array **Delete []**.
 
 ## <a name="example"></a>Esempio
 
@@ -59,6 +59,6 @@ void f( )
 }
 ```
 
-Se l'oggetto sottostante nella matrice è un tipo primitivo, ad esempio `int`, `float`, `enum`o puntatore, non sono presenti distruttori da chiamare. In questi casi, viene invece segnalato un avviso [C6283](../code-quality/c6283.md) .
+Se l'oggetto sottostante nella matrice è un tipo primitivo, ad esempio **`int`** ,, **`float`** **`enum`** o puntatore, non sono presenti distruttori da chiamare. In questi casi, viene invece segnalato un avviso [C6283](../code-quality/c6283.md) .
 
-L'uso di New e Delete presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL ( C++ Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+L'uso di New e Delete presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
