commit translated contents

--- a/docs/code-quality/c28219.md
+++ b/docs/code-quality/c28219.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28219
 ms.assetid: f8b4fca4-8bba-4720-ae79-f4619161a85e
-ms.openlocfilehash: 134fa49156ce28cd9be17a2a01215c39376bd8c5
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: a5955fb47f38497fa2a14a434e98d920f0b2bcfc
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77421847"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87229272"
 ---
 # <a name="c28219"></a>C28219
 
 > Warning C28219: membro dell'enumerazione prevista per l'annotazione del parametro nell'annotazione
 
-È previsto che un parametro di un'annotazione sia un membro del tipo `enum` denominato e che sia stato rilevato un altro simbolo. usare un membro del tipo `enum`. Questo indica in genere una macro di annotazione codificata in modo errato.
+Un parametro di un'annotazione deve essere un membro del tipo denominato **`enum`** ed è stato rilevato un altro simbolo; usare un membro di quel **`enum`** tipo. Questo indica in genere una macro di annotazione codificata in modo errato.
