--- a/docs/code-quality/c6242.md
+++ b/docs/code-quality/c6242.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6242
 ms.assetid: 523d46ce-8370-434c-a752-2e3a18cca9a5
-ms.openlocfilehash: 1c9d3c59887ac23cd8968ca02748106671388a1b
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 6cb1e877c156b78825bb119717a723e0a0435e93
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420489"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87229246"
 ---
 # <a name="c6242"></a>C6242
 
@@ -22,7 +22,7 @@ Questo avviso indica che un'istruzione Jump fa in modo che il flusso di controll
 
 Se si lascia il blocco protetto di un try-finally diverso dal passaggio dall'ultima istruzione, viene richiesta la rimozione locale. La rimozione locale richiede in genere circa 1000 istruzioni del computer; Pertanto, è dannoso per le prestazioni.
 
-Usare `_leave` per uscire dal blocco protetto di un try-finally.
+Usare **' __leave** per uscire dal blocco protetto di un try-finally.
 
 ## <a name="example"></a>Esempio
 
@@ -52,7 +52,7 @@ int f( )
 }
 ```
 
-Per correggere il problema, usare `__leave` come illustrato nel codice seguente:
+Per correggere il problema, usare **' __leave** come illustrato nel codice seguente:
 
 ```cpp
 #include <malloc.h>
@@ -82,7 +82,7 @@ int f()
 }
 ```
 
-L'uso di malloc e Free presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL ( C++ Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+L'uso di malloc e Free presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
 
 ## <a name="see-also"></a>Vedere anche
 
