--- a/docs/code-quality/c28251.md
+++ b/docs/code-quality/c28251.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C28251
 ms.assetid: 9335ad9a-4650-41d2-a2c2-0474d7346472
-ms.openlocfilehash: 85420012cacf738f512e8582400009fa0ccab908
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 4b4712135aa37cbfaa3635e94422b0a6e376ee27
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77421490"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87229259"
 ---
 # <a name="c28251"></a>C28251
 
 > avviso C28251: Annotazione incoerente per la funzione: errore dell'istanza
 
-Questo avviso si riferisce a un errore nell'annotazione e riflette il requisito in base al quale le annotazioni in una dichiarazione di funzione devono corrispondere a quelle nella definizione, tranne nel caso in cui sia presente una funzione `typedef`. In tal caso, la funzione `typedef` viene considerata come definitiva per la dichiarazione e la definizione.
+Questo avviso si riferisce a un errore nell'annotazione e riflette il requisito in base al quale le annotazioni in una dichiarazione di funzione devono corrispondere a quelle nella definizione, tranne nel caso di una funzione **`typedef`** . In tal caso, la funzione **`typedef`** viene considerata come definitiva per la dichiarazione e la definizione.
 
 Si noti che le annotazioni vengono in genere implementate come macro e una macro produce in genere diverse Annotazioni di basso livello. Questo avviso viene segnalato per ogni annotazione di basso livello senza corrispondenza, pertanto una singola macro di annotazione senza corrispondenza può restituire un numero di annotazioni di basso livello senza corrispondenza. È consigliabile confrontare semplicemente il codice sorgente della dichiarazione e della definizione per verificare che siano uguali. (Le differenze significative nell'ordine delle annotazioni non vengono segnalate).
 
