--- a/docs/code-quality/c6328.md
+++ b/docs/code-quality/c6328.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - C6328
 ms.assetid: e25b00fa-d344-4dc9-b322-b4f1ae06f315
-ms.openlocfilehash: c0f04bbf5e6b409a48f471f63e97f2e0c4658a5d
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: ad8cf0b2564ff9a24df29851c094e31089df2ae6
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419628"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87231234"
 ---
 # <a name="c6328"></a>C6328
 
-> Avviso C6328: dimensioni non corrispondenti: \<tipo > passato come parametro \<numero > quando \<tipo > è necessario nella chiamata a \<funzione >
+> avviso C6328: dimensioni non corrispondenti: \<type> passato come parametro \<number> quando \<type> è obbligatorio nella chiamata a\<function>
 
-Il passaggio di un argomento di tipo `char` al runtime C, le routine basate su caratteri denominate `is<xxx>()`, ad esempio `isspace()`, possono avere risultati imprevedibili. Ad esempio, un carattere a byte singolo SBCS o MBCS di tipo `char` con un valore maggiore di `0x7F` è negativo. Se viene passato un `char`, il compilatore potrebbe convertire il valore in un `int` firmato o un `long`firmato. Questo valore può essere esteso con segno dal compilatore, con risultati imprevisti. Ad esempio, `isspace` accetta un argomento di tipo `int`; Tuttavia, l'intervallo valido di valori per il relativo argomento di input è:
+Il passaggio di un argomento di tipo **`char`** al runtime C, le routine basate su caratteri denominate `is<xxx>()` , ad esempio, `isspace()` possono avere risultati imprevedibili. Ad esempio, un carattere a byte singolo SBCS o MBCS di tipo **`char`** con un valore maggiore di `0x7F` è un valore negativo. Se **`char`** viene passato un oggetto, il compilatore potrebbe convertire il valore in un oggetto con segno **`int`** o con segno **`long`** . Questo valore può essere esteso con segno dal compilatore, con risultati imprevisti. Ad esempio, `isspace` accetta un argomento di tipo **`int`** ; tuttavia, l'intervallo valido di valori per il relativo argomento di input è:
 
-`0 <= c <= 255`, più il valore speciale `EOF`.
+`0 <= c <= 255`, più il valore speciale `EOF` .
 
 ## <a name="example"></a>Esempio
 
-Per impostazione predefinita, `char` è un tipo con segno nel C++ compilatore Microsoft, quindi l'intervallo di valori di una variabile di tipo char è `-128 <= c <= 127`. Pertanto, se sono state effettuate le operazioni seguenti, `c` verrebbe esteso con segno a un `int` firmato con un valore pari a-37, che non è compreso nell'intervallo valido per [lo spazio](/cpp/standard-library/locale-functions#isspace):
+Per impostazione predefinita, **`char`** è un tipo con segno nel compilatore Microsoft C++, quindi l'intervallo di valori di una variabile di tipo char è `-128 <= c <= 127` . Se pertanto sono state effettuate le operazioni seguenti, il `c` segno verrà esteso a un oggetto firmato **`int`** con un valore pari a-37, che non è compreso nell'intervallo valido per [lo spazio](/cpp/standard-library/locale-functions#isspace).
 
 ```cpp
 #include <iostream>
