--- a/docs/code-quality/c6383.md
+++ b/docs/code-quality/c6383.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6383
 ms.assetid: f5ff7938-0fbe-4b71-b98f-098fe887799d
-ms.openlocfilehash: 117b81b02a98c043fdd22a5b7e176bb3000865c5
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 2b7d71a57bc0e77e8b4cc0f128b4e8b75506af35
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419474"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87231221"
 ---
 # <a name="c6383"></a>C6383
 
-> avviso C6383: sovraccarico del buffer causato dalla conversione di un conteggio di elementi in un conteggio di byte: è previsto un conteggio di elementi per il parametro \<numero > nella chiamata a \<funzione >
+> avviso C6383: sovraccarico del buffer causato dalla conversione di un conteggio di elementi in un conteggio di byte: è previsto un conteggio di elementi per il parametro \<number> nella chiamata a\<function>
 
-Questo avviso indica che viene passato un conteggio di byte non costanti quando è necessario un conteggio di elementi. Questa situazione si verifica in genere quando una variabile viene moltiplicata per il `sizeof` un tipo, ma l'analisi del codice suggerisce che è necessario un conteggio degli elementi.
+Questo avviso indica che viene passato un conteggio di byte non costanti quando è necessario un conteggio di elementi. Questa situazione si verifica in genere quando una variabile viene moltiplicata per **`sizeof`** un tipo, ma l'analisi del codice suggerisce che è necessario un numero di elementi.
 
 ## <a name="example"></a>Esempio
 
@@ -35,7 +35,7 @@ void f( wchar_t* t, wchar_t* s, int n )
 }
 ```
 
-Per correggere il problema, non moltiplicare la variabile con il `sizeof` un tipo, come illustrato nel codice seguente:
+Per correggere il problema, non moltiplicare la variabile con **`sizeof`** un tipo come illustrato nel codice seguente:
 
 ```cpp
 void f( wchar_t* t, wchar_t* s, int n )
@@ -60,4 +60,4 @@ void f(wchar_t* t, wchar_t* s, size_t n)
 ## <a name="see-also"></a>Vedere anche
 
 - [strncpy_s, _strncpy_s_l, wcsncpy_s, _wcsncpy_s_l, _mbsncpy_s, _mbsncpy_s_l](/cpp/c-runtime-library/reference/strncpy-s-strncpy-s-l-wcsncpy-s-wcsncpy-s-l-mbsncpy-s-mbsncpy-s-l)
-- [sizeof Operator](/cpp/cpp/sizeof-operator) (Operatore sizeof)
+- [Operatore sizeof](/cpp/cpp/sizeof-operator)
